fix spacing on events on front page

--- a/client/src/pages/Home.scss
+++ b/client/src/pages/Home.scss
@@ -6,7 +6,7 @@
 }
 
 .schedule-view {
-    margin: 0 8rem;
+    margin: 0 15vw;
     padding-bottom: 0.5rem;
 }
 
